# psyche

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.ros2  README.md  README_SERVICES.md  asound.conf  docker-compose.yaml  docker-compose.yml  forebrain.yaml  hindbrain.yaml  launch.sh  log.txt  mic-check.sh  motherbrain.yaml  mpu.patch  patch  r1a1.yaml  requirements.txt  say.sh  setup.sh  terminal.sh
.Jules/: palette.md
.github/: copilot-instructions.md
.github/workflows/: build_zenoh_wheels.yml
.jules/: bolt.md
cli/: psh  psy
containers/cerebellum/: .env.example  docker-compose.yml
containers/forebrain/: .env.example  docker-compose.yml
devices/: brainstem.toml  cerebellum.toml  ear.toml  forebrain.toml  rpi0.toml
docs/: ARCHITECTURE.md  CLI.md  SERVICES.md  WORKSPACE.md  docker_setup.md
home/: hello.txt
hosts/: cerebellum.json  ear.json  ear.local.sh  forebrain.json
launch/: forebrain.sh  hindbrain.sh  ideapad.local.sh  motherbrain.sh  play_voice.sh  r1a1.sh
layer1/scripts/: zenoh_autonet.sh
layer1/zenoh/: bridge_ros2.json5  router.json5
layer2/: rmw.env
layer3/launcher/: launch_from_toml.py
layer3/nodes/: ublox_publisher.py
layer3/ros2_pkgs/psyche_ublox_publisher/: package.xml  setup.cfg
layer3/ros2_pkgs/psyche_ublox_publisher/psyche_ublox_publisher/: __init__.py  ublox_publisher.py
layer3/ros2_pkgs/psyche_ublox_publisher/resource/: psyche_ublox_publisher
layer3/services/: camera.yaml  ear.yaml  foot.yaml  imu.yaml  imu_mpu6050.py  imu_mpu6050_node.py  nav2.yaml  ros2_republish_audio.py  ros2_republish_camera.py  (+6 more)
scripts/: ros_entrypoint.sh  start_services.sh
src/psyche_interfaces/: CMakeLists.txt  package.xml
src/psyche_interfaces/action/: InferenceWithImages.action  PlainTextInference.action
src/psyche_interfaces/message/: Sensation.msg  StreamedChunk.msg
src/psyche_interfaces/msg/: AudioChunk.msg  AudioPCM.msg  AudioSegment.msg  Completion.msg  Feedback.msg  Impression.msg  Intention.msg  Sensation.msg  TranscriptEvent.msg  TranscriptPartial.msg  TranscriptSegment.msg  TranscriptWhole.msg  Urge.msg
src/r1/: LICENSE  package.xml  setup.cfg  setup.py
src/r1/launch/: boot.launch.py  by_host_forebrain.launch.py  by_host_ideapad.launch.py  by_host_motherbrain.launch.py  by_host_r1a1.launch.py  by_host_r1a1_old.launch.py  context.launch.py  context.py  executive.py  identity.launch.py  identity.py  imu.launch.py  imu.py  intention.launch.py  intention.py  llms.launch.py  llms.py  monitor.launch.py  motherbrain.launch.py  motor_control.launch.py  motor_control.py  musicality.launch.py  musicality.py  power_management.launch.py  power_management.py  r1.launch.py  sentience.launch.py  sentience.py  shell.launch.py  shell.py  speech.launch.py  speech_comprehension.launch.py  speech_comprehension.py  vision.launch.py  vision.py  voice.launch.py  voice.py
src/r1/r1/: actor.py  boot_announcer.py  direct_dev_talk.py  direct_speech.py  monitor.py  motivator.py  play_song.py  shell_exec.py  tutorial.py
systemd/: cerebellum-containers.service  forebrain-containers.service  layer1-bridge.service  layer1-zenoh.service  layer2-ros.env  layer3-launcher.service  psyche-foot.service  psyche-imu.service  psyched-updater.service  psyched-updater.timer  psycheos-updater.service  psycheos-updater.timer  ros2-audio-repub.service  ros2-camera-repub.service  ros2-gps-repub.service  zenoh-audio-pub.service  zenoh-camera-pub.service  zenoh-gnss-pub.service
tests/: test_audio_interface_msgs.py  test_ear_imu_config.py  test_mic_vad_energy.py  test_mic_vad_topic.py  test_psh_bearing.py  test_psy_config.py  test_systemd_template.py  test_validate_device_toml.py  test_voice_node_behavior.py  test_voice_piper_detection.py  test_zenoh_audio_pub.py  test_zenoh_camera_pub.py  tmp_test1.toml  tmp_test2.toml
tools/: __init__.py  add_wheel.sh  install.sh  psy_config.py  ros_exec.sh  validate_device_toml.py  voice_test.sh
tools/provision/services/debug_log_code/debug_log_node/: package.xml  setup.py
tools/provision/services/debug_log_code/debug_log_node/debug_log_node/: __init__.py  debug_log_node.py
tools/provision/services/debug_log_code/debug_log_node/resource/: debug_log_node
tools/provision/services/launch_wrappers/psyche_create_launch/: package.xml  setup.py
tools/provision/services/launch_wrappers/psyche_create_launch/launch/: create_launch.py
tools/provision/services/launch_wrappers/psyche_create_launch/params/: create_params.yaml
tools/provision/services/launch_wrappers/psyche_debug_log_launch/: package.xml  setup.py
tools/provision/services/launch_wrappers/psyche_debug_log_launch/launch/: debug_log_launch.py
tools/provision/services/launch_wrappers/psyche_mic_launch/: package.xml  setup.py
tools/provision/services/launch_wrappers/psyche_mic_launch/launch/: mic_launch.py
tools/provision/services/launch_wrappers/psyche_mic_launch/params/: mic_params.yaml
tools/provision/services/launch_wrappers/psyche_voice_launch/: package.xml  setup.py
tools/provision/services/launch_wrappers/psyche_voice_launch/launch/: voice_launch.py
tools/provision/services/launch_wrappers/psyche_voice_launch/params/: voice_params.yaml
tools/provision/services/launch_wrappers/psyched_create_launch/: package.xml  setup.py
tools/provision/services/launch_wrappers/psyched_debug_log_launch/: package.xml  setup.py
tools/provision/services/launch_wrappers/psyched_ublox_launch/: package.xml  setup.py
tools/provision/services/mic_code/mic_node/: package.xml  setup.py
tools/provision/services/mic_code/mic_node/mic_node/: __init__.py  mic_node.py
tools/provision/services/mic_code/mic_node/resource/: mic_node
tools/provision/services/oled_code/oled_driver/: package.xml
tools/provision/services/oled_code/oled_driver/oled_driver/: __init__.py
tools/provision/services/voice_code/voice_node/: package.xml  setup.py
tools/provision/services/voice_code/voice_node/resource/: voice_node
tools/provision/services/voice_code/voice_node/voice_node/: __init__.py  voice_node.py
web/: README.md  app.py
wheels/: README.md
(+548 files in other folders)
