<?xml version="1.0"?>
<package format="3">
  <name>psyche_interfaces</name>
  <version>0.1.0</version>
  <description>Custom interface definitions for the Psyche robot.</description>
  <maintainer email="psyche@robot.local">Psyche Robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
