<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r1</name>
  <version>0.0.0</version>
  <description>The R1 is a robot built from the ground up using Psyche</description>
  <maintainer email="tdreed@gmail.com">dancxjo</maintainer>
  <license>Pseudo-Conscious-Bill-of-Rights</license>

  <depend>rclpy</depend>
  <depend>psyche</depend>
  <depend>psyche_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
