<?xml version="1.0"?>
<package format="3">
    <name>psyche_debug_log_launch</name>
    <version>0.0.0</version>
    <description>Launch wrapper for debug_log</description>
    <maintainer email="devnull@example.com">psyche</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>ros2launch</exec_depend>
</package>
