<?xml version="1.0"?>
<package format="3">
    <name>psyche_mic_launch</name>
    <version>0.0.1</version>
    <description>Launch wrapper for local mic_node with sensible defaults</description>
    <maintainer email="you@example.com">you</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

</package>
