<?xml version="1.0"?>
<package format="3">
    <name>psyched_create_launch</name>
    <version>0.0.1</version>
    <description>Launch wrapper for create node</description>
    <maintainer email="you@example.com">psyched</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

</package>
