<?xml version="1.0"?>
<package format="3">
    <name>psyched_debug_log_launch</name>
    <version>0.0.1</version>
    <description>Launch wrapper for debug_log_node</description>
    <maintainer email="devnull@example.com">psyched</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

</package>
