<?xml version="1.0"?>
<package format="3">
    <name>oled_driver</name>
    <version>0.0.1</version>
    <description>SSD1306 OLED driver stub (Python)</description>
    <maintainer email="tdreed@gmail.com">you</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <exec_depend>rclpy</exec_depend>

</package>
