<?xml version="1.0"?>
<package format="3">
    <name>voice_node</name>
    <version>0.0.1</version>
    <description>Voice TTS queue node using piper or espeak fallback</description>
    <maintainer email="you@example.com">you</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>
